# office-addin-sideloader

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  installer.jinja2  invoke.yaml  oaloader.py  pyproject.toml  tasks.py
oaloader/: __init__.py  __main__.py  command.py  const.py  core.py  log.py
