[tool.poetry]
name = "oaloader"
version = "0.1.0"
license = "MIT"
description = "A handy tool to manage your office addins locally, you can use it for addin development or deploy your addins for your clients out of AppSource."
authors = ["elonzh <elonzh@qq.com>"]
readme = "README.md"
homepage = "https://github.com/elonzh/office-addin-sideloader"
repository = "https://github.com/elonzh/office-addin-sideloader"
keywords = ["Windows", "Office"]
# https://pypi.org/classifiers/
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Operating System :: Microsoft :: Windows :: Windows 8",
    "Operating System :: Microsoft :: Windows :: Windows 8.1",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Build Tools",
]

[tool.poetry.scripts]
oaloader = "oaloader.__main__:cli"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.8"
pywin32 = "^300"
click = "^7.1.2"
tabulate = "^0.8.9"
xmltodict = "^0.12.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
Nuitka = "^0.6.15"
black = "^20.8b1"
flake8 = "^3.9.0"
flake8-bugbear = "^21.4.3"
isort = "^5.8.0"
pre-commit = "^2.11.1"
pytest = "^6.2.2"
zstandard = "^0.15.2"
jinja2 = "^3.0.1"
invoke = "^1.6.0"
sentry-sdk = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"

# https://docs.pytest.org/en/stable/customize.html#pyproject-toml
[tool.pytest.ini_options]
minversion = "6.0"
